<resources>
    <string name="app_name">Screen Title</string>
    <string name="contactDetailTitle">Confirmar Datos</string>

    <string name="nameTextInput">Nombre completo</string>
    <string name="birthDateTextInput">Fecha de nacimiento</string>
    <string name="phoneTextInput">Télefono</string>
    <string name="emailTextInput">Email</string>
    <string name="descriptionTextInput">Descripción Contacto</string>

    <string name="nameParam">name</string>
    <string name="birthDateParam">birthDate</string>
    <string name="phoneParam">phone</string>
    <string name="emailParam">email</string>
    <string name="descriptionParam">description</string>

    <string name="buttonNext">Siguiente</string>

    <string name="birthDateLabel">Fecha de nacimiento :</string>
    <string name="phoneLabel">Télefono :</string>
    <string name="emailLabel">Email :</string>
    <string name="descriptionLabel">Descripción :</string>

    <string name="buttonEdit">Editar Datos</string>

</resources>